# bank-leumi-entrance-test

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md
app/: requirements.txt
app/src/app/: main.py
calc/: .gitignore  requirements.txt  setup.cfg  setup.py
calc/src/calc/: __about__.py  __init__.py  calc.py
deployment/ansible/: playbook.yaml
deployment/ansible/files/: calc-app-deployment.k8s.yaml  calc-app-service.k8s.yaml  calc-app.k8s.yaml  cni_installation.sh
deployment/ansible/files/as_sepparate_files/: calc-app-deployment.k8s.yaml  calc-app-service.k8s.yaml
deployment/ansible/templates/: .gitignore  calc-app-secret.k8s.yaml.j2  calico-resources.yaml.j2  extra-vars.json  extra-vars.json.dist  inventory.yaml.dist
deployment/docker/: main.py  requirements.txt  start-kubernetes.sh
deployment/terraform/: backend.tf  ec2.tf  nlb.tf  sg_proxy_ingress.tf  vars.tf  vpc_proxy_ingress.tf  vpc_test_spoke.tf
