[metadata]
name = calc
version = attr: calc.__about__.__version__
author = Shlomo Kallner
author_email = shlomo.kallner@gmail.com
description = A simple expression calculator App 
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = one, two
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.10
install_requires =
    pip 
    wheel 
    setuptools 
    build

    fastapi[all,dev,doc,test]
    typing-extensions
    python-dotenv
    parglare
    typer[all]


# This contains the necessary options for a src-layout, set up.
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    calc-app = calc.calc:genCLIMain
